Blinky: now with UART

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,10 @@ TRG	= HelloWorld
 SRC	= main.c
 SRC	+= pin_mux_config.c
 SRC	+= startup_gcc.c
+SUBDIRS	= uart0
 
 LDSCRIPT	= cc3200.ld
 ENTRY	= ResetISR
+BAUD	= 115200
 
 include ../Makefile_CC3200.mk
