Simplelink now works

--- a/platform/cc3200.cfg
+++ b/platform/cc3200.cfg
@@ -96,7 +96,8 @@ source [find mem_helper.tcl]
 $_TARGETNAME configure -event gdb-attach {
 # 	cc3200_dbginit $_TARGETNAME
 #	cortex_m dbginit
-	halt
+#	halt
+	soft_reset_halt
 }
 
 $_TARGETNAME configure -event "reset-start" { adapter_khz 1000 }
