--- a/Enterprise/Makefile
+++ b/Enterprise/Makefile
@@ -6,6 +6,7 @@ SUBDIRS	= uart0 rgbled common
 LDSCRIPT	= cc3200.ld
 OPTLEVEL	= s
 ENTRY	= ResetISR
-BAUD	= 115200
+
+DEFS	+= -DUART0_BAUD=115200
 
 include ../Makefile_CC3200.mk
