--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,5 +1,5 @@
 TRG	= demo
-SRC	= main.c events.c fs.c device.c
+SRC	= main.c events.c fs.c device.c wlan.c
 SRC	+= startup_gcc.c
 SUBDIRS	= uart0 rgbled common
 
