QBS build system

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -2,6 +2,7 @@ TRG	= demo
 SRC	= main.c events.c fs.c device.c wlan.c
 SRC	+= startup_gcc.c
 SUBDIRS	= uart0 rgbled common
+SUBDIRS	:= $(SUBDIRS:%=../modules/%)
 
 LDSCRIPT	= cc3200.ld
 OPTLEVEL	= s
